# fingerprint-aligner

./: CMakeLists.txt  LICENSE  README.md
examples/: covid-to-beat.fasta  drosophila_query.fasta  drosophila_ref.fasta  out.fasta  out.snps  sars-queries-epi.fa  sars-queries.fa  sars-reference.fa  tester.fasta
src/: main.cpp
src/aligner/: Aligner.cpp  Aligner.hpp
src/aligner/methods/: hirschberg.cpp  hirschberg.hpp
src/exceptions/: Exceptions.hpp  FileExceptions.hpp  GenomeExceptions.hpp
src/file/: File.cpp  File.hpp  FileManager.cpp  FileManager.hpp
src/file/formats/: FASTA.hpp  SNPS.hpp
src/genome/: Genome.cpp  Genome.hpp  Query.cpp  Query.hpp  Reference.cpp  Reference.hpp
src/types/: alignment.hpp
src/utils/: searcher.cpp  searcher.hpp  threader.hpp
